--- a/notebooks/Machine learning with scikit learn_solution.ipynb
+++ b/notebooks/Machine learning with scikit learn_solution.ipynb
@@ -89,7 +89,7 @@
         "import numpy as np\n",
         "import sklearn"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         "telco = pd.read_csv('https://raw.githubusercontent.com/adelnehme/machine-learning-with-scikit-learn-live-training/master/data/telco_churn.csv')\n",
         "pd.set_option('display.max_columns', None)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "# Print header\n",
         "telco.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +368,7 @@
         "# Print info\n",
         "telco.info()"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +433,7 @@
         "# Find the null model\n",
         "telco['Churn'].value_counts()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +473,7 @@
         "# Find the null model\n",
         "telco['Churn'].value_counts() / len(telco)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +509,7 @@
         "# Drop customer ID column\n",
         "telco.drop('customerID', axis = 1, inplace = True)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -562,7 +562,7 @@
         "# Grab a look at the header\n",
         "telco.head()"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -794,7 +794,7 @@
         "# Get dtypes of column\n",
         "telco.dtypes"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -841,7 +841,7 @@
         "feature_names = features.columns\n",
         "print(feature_names)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -854,7 +854,7 @@
         "categorical_names = features.select_dtypes('object').columns\n",
         "numeric_names = features.select_dtypes(exclude = 'object').columns"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -919,7 +919,7 @@
         "    sns.countplot(x = column, hue =  'Churn', data = telco, ax = ax)\n",
         "    "
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -991,7 +991,7 @@
         "    # Create a boxplot\n",
         "    sns.boxplot(x = \"Churn\", y = column, data = telco, ax = ax)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1095,7 +1095,7 @@
         "X = features\n",
         "y = telco['Churn'].replace({'Stayed': 0, 'Churned':1})"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1110,7 +1110,7 @@
         "# Split data into train test splits\n",
         "train_X, test_X, train_Y, test_Y = train_test_split(X, y, test_size = 0.25, random_state=123)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1132,7 +1132,7 @@
         "train_numeric_transform = scaler.transform(train_X[numeric_names])\n",
         "test_numeric_transform = scaler.transform(test_X[numeric_names])"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1162,7 +1162,7 @@
         "# See changes\n",
         "train_X.head()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1395,7 +1395,7 @@
         "train_X = pd.get_dummies(train_X, columns = categorical_names,  drop_first = True)\n",
         "test_X = pd.get_dummies(test_X, columns = categorical_names,  drop_first = True)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1412,7 +1412,7 @@
         "# See changes\n",
         "train_X.head()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1780,7 +1780,7 @@
         "test_X['in_ecosystem'] = test_X[service_columns].sum(axis = 1)\n",
         "test_X['in_ecosystem'] = np.where(test_X['in_ecosystem'] >= 2, 1 , 0)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1885,7 +1885,7 @@
         "print('Test accuracy:', round(test_accuracy, 4))\n",
         "print('Train accuracy:', round(train_accuracy, 4))"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1957,7 +1957,7 @@
         "print('Test accuracy:', round(test_accuracy, 4))\n",
         "print('Train accuracy:', round(train_accuracy, 4))"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1988,19 +1988,13 @@
         "Grid-search can be done using the `GridSearchCV()` function - it takes in as arguments:\n",
         "\n",
         "- The model being used.\n",
-        "- The possible parameters to test - inputted as a dictionary. \n",
-        "- `verbose`: More detailed output if `2`.\n",
-        "\n"
+        "- The possible parameters to test - inputted as a dictionary. \n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0cVmSKi50iyg",
-        "outputId": "510cd01a-fb01-4e76-89ca-b8d08140047f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "0cVmSKi50iyg"
       },
       "source": [
         "# Import GridSearchCV\n",
@@ -2017,30 +2011,8 @@
         "# Fit clf on training data\n",
         "clf.fit(train_X, train_Y)"
       ],
-      "execution_count": 67,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "GridSearchCV(cv=None, error_score=nan,\n",
-              "             estimator=KNeighborsClassifier(algorithm='auto', leaf_size=30,\n",
-              "                                            metric='minkowski',\n",
-              "                                            metric_params=None, n_jobs=None,\n",
-              "                                            n_neighbors=5, p=2,\n",
-              "                                            weights='uniform'),\n",
-              "             iid='deprecated', n_jobs=None,\n",
-              "             param_grid={'n_neighbors': [4, 6, 8, 10, 12, 14, 16, 18]},\n",
-              "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
-              "             scoring=None, verbose=0)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 67
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2057,7 +2029,7 @@
         "print('Best parameters: ', clf.best_params_)\n",
         "print('\\n',round(accuracy_score(y_pred, test_Y), 4))"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
