--- a/notebooks/Data_Upksilling_Introduction_to_Machine_Learning_solution.ipynb
+++ b/notebooks/Data_Upksilling_Introduction_to_Machine_Learning_solution.ipynb
@@ -2133,7 +2133,7 @@
         "id": "Dd7VDPtxtNFt"
       },
       "source": [
-        "#### **Hyperparameter Tuning and grid-search**\n",
+        "#### **Hyperparameter Tuning**\n",
         "\n",
         "Almost all algorithms have hyperparameters that can be tuned to fine-tune their performance, and better capture the patterns in the dataset. Having a good understanding and intuition of how algorithms work is essential to fully utilize hyperparameter tuning for the purposes of improving model performance and testing different modeling strategies. "
       ]
@@ -2182,106 +2182,6 @@
           "text": [
             "Test accuracy: 0.7723\n",
             "Train accuracy: 0.8241\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RHvodiPqvQqy"
-      },
-      "source": [
-        "**Using grid-search**\n",
-        "\n",
-        "Grid-search is a hyperparameter tuning algorithm that sequentially goes through every possible combination of hyperparameter combination it is fed in space. For example, for hyperparameters `parameter 1` and `parameter 2` - it would mean testing out all possible combinations of their values:\n",
-        "\n",
-        "\n",
-        "<p align=\"center\">\n",
-        "<img src=\"https://github.com/datacamp/machine-learning-with-scikit-learn-live-training/blob/master/assets/grid-search.gif?raw=true\" width=\"50%\">\n",
-        "</p>\n",
-        "\n",
-        "\n",
-        "Grid-search can be done using the `GridSearchCV()` function - it takes in as arguments:\n",
-        "\n",
-        "- The model being used.\n",
-        "- The possible parameters to test - inputted as a dictionary. \n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0cVmSKi50iyg",
-        "outputId": "80fb38f3-fa90-4773-fa2e-46214e090da8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# Import GridSearchCV\n",
-        "from sklearn.model_selection import GridSearchCV\n",
-        "\n",
-        "# Define parameter grid\n",
-        "params = {'n_neighbors': [4,6,8,10,12,14,16,18]}\n",
-        "\n",
-        "# Instantiate a K Nearest Neighbor classifier \n",
-        "knn = KNeighborsClassifier()\n",
-        "\n",
-        "# Instantiate a GridSearch \n",
-        "clf = GridSearchCV(knn, params)\n",
-        "\n",
-        "# Fit clf on training data\n",
-        "clf.fit(train_X, train_Y)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "GridSearchCV(cv=None, error_score=nan,\n",
-              "             estimator=KNeighborsClassifier(algorithm='auto', leaf_size=30,\n",
-              "                                            metric='minkowski',\n",
-              "                                            metric_params=None, n_jobs=None,\n",
-              "                                            n_neighbors=5, p=2,\n",
-              "                                            weights='uniform'),\n",
-              "             iid='deprecated', n_jobs=None,\n",
-              "             param_grid={'n_neighbors': [4, 6, 8, 10, 12, 14, 16, 18]},\n",
-              "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
-              "             scoring=None, verbose=0)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 19
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vZMU6Utn0iyk",
-        "outputId": "89512069-4c6b-4f05-ae4b-4788440e7824",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# Generate predictions and calculate accuracy error\n",
-        "y_pred = clf.predict(test_X)\n",
-        "print('Best parameters: ', clf.best_params_)\n",
-        "print('\\n',round(accuracy_score(y_pred, test_Y), 4))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Best parameters:  {'n_neighbors': 16}\n",
-            "\n",
-            " 0.7768\n"
           ],
           "name": "stdout"
         }
