--- a/notebooks/Data_Upksilling_Introduction_to_Machine_Learning.ipynb
+++ b/notebooks/Data_Upksilling_Introduction_to_Machine_Learning.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.1"
     },
     "colab": {
-      "name": "Data Upskilling Learning Club: Introduction to Machine Learning.ipynb",
+      "name": "Data Upskilling Learning Club: Introduction to Machine Learning Solution.ipynb",
       "provenance": []
     }
   },
@@ -32,7 +32,7 @@
       },
       "source": [
         "<p align=\"center\">\n",
-        "<img src=\"https://github.com/adelnehme/machine-learning-with-scikit-learn-live-training/blob/master/assets/dc_amazon_logo.png?raw=True\" alt = \"DataCamp icon\" width=\"50%\">\n",
+        "<img src=\"https://github.com/adelnehme/data-upskilling-learning-club-IV/blob/master/assets/dc_amazon_logo.png?raw=True\" alt = \"DataCamp icon\" width=\"50%\">\n",
         "</p>\n",
         "\n",
         "\n",
@@ -103,7 +103,7 @@
         "import numpy as np\n",
         "import sklearn"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
         "telco = pd.read_csv('https://raw.githubusercontent.com/adelnehme/machine-learning-with-scikit-learn-live-training/master/data/telco_churn.csv')\n",
         "pd.set_option('display.max_columns', None)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,6 +188,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xYynPBTc-vYU"
+      },
+      "source": [
+        "In this particular instance, the null model (always predicting `\"Stayed\"`) is 73.4% - and any meaningful model that improves performance will have to break that accuracy score. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "GqLtk5Et0iwN"
@@ -195,7 +204,7 @@
       "source": [
         "# Drop customer ID column\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,9 +299,10 @@
         "id": "qoVBM6plRQDS"
       },
       "source": [
-        "# Get categorical and numeric column names\n"
+        "# Get categorical and numeric column names\n",
+        "\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -437,7 +447,7 @@
         "<br>\n",
         "\n",
         "<p align=\"center\">\n",
-        "<img src=\"https://github.com/adelnehme/machine-learning-with-scikit-learn-live-training/blob/master/assets/telco.png?raw=true\" width=\"68%\">\n",
+        "<img src=\"https://github.com/adelnehme/data-upskilling-learning-club-IV/blob/master/assets/telco.png?raw=true\" width=\"68%\">\n",
         "</p>\n",
         "\n",
         "\n",
@@ -456,7 +466,7 @@
       "source": [
         "# Split data between X (features) and y (target)\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -484,7 +494,7 @@
         "\n",
         "# Split data into train test splits\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -508,7 +518,7 @@
         "<br>\n",
         "\n",
         "<p align=\"center\">\n",
-        "<img src=\"https://github.com/datacamp/machine-learning-with-scikit-learn-live-training/blob/master/assets/standard_scaler.gif?raw=true?resize\" width=\"45%\">\n",
+        "<img src=\"https://github.com/adelnehme/data-upskilling-learning-club-IV/blob/master/assets/standard_scaler.gif?raw=true?resize\" width=\"45%\">\n",
         "</p>\n",
         "\n",
         "\n",
@@ -552,7 +562,7 @@
         "\n",
         "# Transform training and test data\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -591,7 +601,7 @@
         "\n",
         "\n",
         "<p align=\"center\">\n",
-        "<img src=\"https://github.com/datacamp/machine-learning-with-scikit-learn-live-training/blob/master/assets/onehot_dummy.gif?raw=true\" width=\"80%\">\n",
+        "<img src=\"https://github.com/adelnehme/data-upskilling-learning-club-IV/blob/master/assets/onehot_dummy.gif?raw=true\" width=\"80%\">\n",
         "</p>\n",
         "\n",
         "Using dummy encoding in `pandas` is actually very easy - we can use the `pd.get_dummies()` function which takes:\n",
@@ -611,7 +621,7 @@
       "source": [
         "# One hot encode cat variables\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -649,17 +659,16 @@
       },
       "source": [
         "# Service columns\n",
-        "\n",
+        "service_columns = ['OnlineSecurity_Yes', 'OnlineBackup_Yes', 'DeviceProtection_Yes', 'TechSupport_Yes']\n",
         "\n",
         "# Create in_ecosystem column\n",
         "\n",
         "\n",
         "# Create feature that is 1 if 2 or more services subscribed, 0 otherwise\n",
         "\n",
-        "\n",
         "# Apply the same on test_X\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -698,7 +707,7 @@
         "<br>\n",
         "\n",
         "<p align=\"center\">\n",
-        "<img src=\"https://github.com/datacamp/machine-learning-with-scikit-learn-live-training/blob/master/assets/decision_boundary.gif?raw=true?\" width=\"50%\">\n",
+        "<img src=\"https://github.com/adelnehme/data-upskilling-learning-club-IV/blob/master/assets/decision_boundary.gif?raw=true?\" width=\"50%\">\n",
         "</p>\n",
         "\n",
         "\n",
@@ -711,7 +720,7 @@
         "<br>\n",
         "\n",
         "<p align=\"center\">\n",
-        "<img src=\"https://github.com/datacamp/machine-learning-with-scikit-learn-live-training/blob/master/assets/knn.gif?raw=true?\" width=\"50%\">\n",
+        "<img src=\"https://github.com/adelnehme/data-upskilling-learning-club-IV/blob/master/assets/knn.gif?raw=true?\" width=\"50%\">\n",
         "</p>\n",
         "\n",
         "Just like almost all algorithms on `sklearn` - the `KNeighborsClassifier()` needs to be instantiated and follows the `.fit()` $\\rightarrow$ `.predict()` paradigm as such:\n",
@@ -738,19 +747,17 @@
       },
       "source": [
         "# Import K-Nearest Neighbor Classifier and accuracy_score\n",
-        "\n",
+        "from sklearn.neighbors import KNeighborsClassifier \n",
+        "from sklearn.metrics import accuracy_score\n",
         "\n",
         "# Instantiate K Nearest Neighbors with 6 neighbors\n",
         "\n",
         "\n",
         "# Fit on training data\n",
         "\n",
-        "\n",
         "# Create Predictions\n",
         "\n",
-        "\n",
         "# Calculate accuracy score on testing data\n",
-        "\n",
         "\n",
         "# Print test accuracy score rounded to 4 decimals\n"
       ],
@@ -775,7 +782,7 @@
         "id": "Dd7VDPtxtNFt"
       },
       "source": [
-        "#### **Hyperparameter Tuning and grid-search**\n",
+        "#### **Hyperparameter Tuning**\n",
         "\n",
         "Almost all algorithms have hyperparameters that can be tuned to fine-tune their performance, and better capture the patterns in the dataset. Having a good understanding and intuition of how algorithms work is essential to fully utilize hyperparameter tuning for the purposes of improving model performance and testing different modeling strategies. "
       ]
@@ -796,78 +803,15 @@
       },
       "source": [
         "# Instantiate K Nearest Neighbors with 8 neighbors\n",
-        "knn = KNeighborsClassifier(n_neighbors = ____)\n",
+        "\n",
         "\n",
         "# Fit on training data\n",
-        "knn.fit(train_X, train_Y)\n",
         "\n",
         "# Create Predictions\n",
-        "pred_test_Y = knn.predict(test_X)\n",
-        "pred_train_Y = knn.predict(train_X)\n",
         "\n",
         "# Calculate accuracy score on testing data\n",
-        "test_accuracy = accuracy_score(test_Y, pred_test_Y)\n",
-        "train_accuracy = accuracy_score(train_Y, pred_train_Y)\n",
         "\n",
-        "# Print test accuracy score rounded to 4 decimals\n",
-        "print('Test accuracy:', round(test_accuracy, 4))\n",
-        "print('Train accuracy:', round(train_accuracy, 4))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RHvodiPqvQqy"
-      },
-      "source": [
-        "**Using grid-search**\n",
-        "\n",
-        "Grid-search is a hyperparameter tuning algorithm that sequentially goes through every possible combination of hyperparameter combination it is fed in space. For example, for hyperparameters `parameter 1` and `parameter 2` - it would mean testing out all possible combinations of their values:\n",
-        "\n",
-        "\n",
-        "<p align=\"center\">\n",
-        "<img src=\"https://github.com/datacamp/machine-learning-with-scikit-learn-live-training/blob/master/assets/grid-search.gif?raw=true\" width=\"50%\">\n",
-        "</p>\n",
-        "\n",
-        "\n",
-        "Grid-search can be done using the `GridSearchCV()` function from `sklearn.model_selection` - it takes in as arguments:\n",
-        "\n",
-        "- The model being used.\n",
-        "- The possible parameters to test - inputted as a dictionary. \n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0cVmSKi50iyg"
-      },
-      "source": [
-        "# Import GridSearchCV\n",
-        "from sklearn.model_selection import GridSearchCV\n",
-        "\n",
-        "# Define parameter grid\n",
-        "\n",
-        "\n",
-        "# Instantiate a K Nearest Neighbor classifier \n",
-        "\n",
-        "\n",
-        "# Instantiate a GridSearch \n",
-        "\n",
-        "\n",
-        "# Fit clf on training data\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vZMU6Utn0iyk"
-      },
-      "source": [
-        "# Generate predictions and calculate accuracy error\n"
+        "# Print test accuracy score rounded to 4 decimals\n"
       ],
       "execution_count": null,
       "outputs": []
